--- a/toolkit1.html
+++ b/toolkit1.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong></strong></a>
+									<a href="index.html" class="logo"><strong>Toolkit #1</strong></a>
 									<ul class="icons">
 										<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -40,10 +40,7 @@
 										<h2>Intended Age Group: 18 and Up, Resident Assistants, Teen Librarians, Camp counselors, etc. </h2>
 									</header>
 
-									<!--<figure>
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-									<figcaption>Caption goes here</figcaption>
-								</figure>
+
 -->								<h3>Links for Activity </h3>
 									<p><a href="http://cargocollective.com/staceykirby/I-AM ">Website and Description of “I Am” Project</a></p>
 									<p><a href="https://vimeo.com/175259945">Video of “I Am” Presentation</a></p>
