--- a/toolkit1.html
+++ b/toolkit1.html
@@ -113,7 +113,7 @@
 										<h2>Get in touch</h2>
 									</header>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">mhbatema@uncg.edu</a></li>
+										<li class="icon solid fa-envelope"><a href="test">mhbatema@uncg.edu</a></li>
 										<li class="icon solid fa-envelope"><a href="#">tdbradsh@uncg.edu</a></li>
 										<li class="icon solid fa-envelope"><a href="#">ajcraver@uncg.edu</a></li>
 										<li class="icon solid fa-envelope"><a href="#">csdunefsky@uncg.edu</a></li>
