--- a/toolkit1.html
+++ b/toolkit1.html
@@ -41,7 +41,7 @@
 									</header>
 
 
--->								<h3>Links for Activity </h3>
+									<h3>Links for Activity </h3>
 									<p><a href="http://cargocollective.com/staceykirby/I-AM ">Website and Description of “I Am” Project</a></p>
 									<p><a href="https://vimeo.com/175259945">Video of “I Am” Presentation</a></p>
 
