--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 					<div id="sidebar">
 						<div class="inner">
 
-						
+
 
 							<!-- Menu -->
 								<nav id="menu">
@@ -200,10 +200,11 @@
 									</header>
 									<!--<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p> -->
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">csdunefsky@uncg.edu</a></li>
-										<!-- <li class="icon solid fa-phone">(000) 000-0000</li> -->
-										<!--<li class="icon solid fa-home">1234 Somewhere Road #8254<br /> -->
-									<!--	Nashville, TN 00000-0000</li> -->
+										<li class="icon solid fa-envelope"><a href="mhbatema@uncg.edu">Marisa Bateman</a></li>
+										<li class="icon solid fa-envelope"><a href="tdbradsh@uncg.edu">Tara Bradshaw</a></li>
+										<li class="icon solid fa-envelope"><a href="ajcraver@uncg.edu">Austin Craver</a></li>
+										<li class="icon solid fa-envelope"><a href="csdunefsky@uncg.edu">Chadwick Dunefsky</a></li>
+										<li class="icon solid fa-envelope"><a href="llsandov@uncg.edu">Lori Sandoval</a></li>
 									</ul>
 								</section>
 
