--- a/toolkit4.html
+++ b/toolkit4.html
@@ -72,7 +72,7 @@
 					<div id="sidebar">
 						<div class="inner">
 
-					
+
 
 							<!-- Menu -->
 								<nav id="menu">
@@ -95,8 +95,11 @@
 										<h2>Get in touch</h2>
 									</header>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">csdunefsky@uncg.edu</a></li>
-									</ul>
+										<li class="icon solid fa-envelope"><a href="mhbatema@uncg.edu">Marisa Bateman</a></li>
+										<li class="icon solid fa-envelope"><a href="tdbradsh@uncg.edu">Tara Bradshaw</a></li>
+										<li class="icon solid fa-envelope"><a href="ajcraver@uncg.edu">Austin Craver</a></li>
+										<li class="icon solid fa-envelope"><a href="csdunefsky@uncg.edu">Chadwick Dunefsky</a></li>
+										<li class="icon solid fa-envelope"><a href="llsandov@uncg.edu">Lori Sandoval</a></li>									</ul>
 								</section>
 
 							<!-- Footer -->
