--- a/index.html
+++ b/index.html
@@ -97,34 +97,31 @@
 									<div class="posts">
 										<article>
 										<!--	<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a> -->
-											<h3>Toolkit 1</h3>
-											<p>Marisa.</p>
+											<h3>Marisa Bateman</h3>
+										<!--	<p>Marisa.</p> -->
 											<ul class="actions">
-												<li><a href="toolkit1.html" class="button">More</a></li>
+												<li><a href="toolkit1.html" class="button">Toolkit 1</a></li>
 											</ul>
 										</article>
 										<article>
 											<!--<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a> -->
-											<h3>Toolkit 2</h3>
-											<p>Austin.</p>
+											<h3>Austin Craver</h3>
 											<ul class="actions">
-												<li><a href="toolkit2.html" class="button">More</a></li>
+												<li><a href="toolkit2.html" class="button">Toolkit 2</a></li>
 											</ul>
 										</article>
 										<article>
 											<!--<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a> -->
-											<h3>Toolkit 3</h3>
-											<p>Tara.</p>
+											<h3>Tara Bradshaw</h3>
 											<ul class="actions">
-												<li><a href="toolkit3.html" class="button">More</a></li>
+												<li><a href="toolkit3.html" class="button">Toolkit 3</a></li>
 											</ul>
 										</article>
 										<article>
 											<!-- <a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a> -->
-											<h3>Toolkit 3</h3>
-											<p>Lori.</p>
+											<h3>Lori Sandoval</h3>
 											<ul class="actions">
-												<li><a href="toolkit4.html" class="button">More</a></li>
+												<li><a href="toolkit4.html" class="button">Toolkit 4</a></li>
 											</ul>
 										</article>
 									</div>
