--- a/toolkit1.html
+++ b/toolkit1.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Lesson Plan #1</title>
+		<title>Gender Identity and Expression Training Toolkit #1</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
