--- a/index.html
+++ b/index.html
@@ -197,11 +197,11 @@
 									</header>
 									<!--<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p> -->
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="mhbatema@uncg.edu">Marisa Bateman</a></li>
-										<li class="icon solid fa-envelope"><a href="tdbradsh@uncg.edu">Tara Bradshaw</a></li>
-										<li class="icon solid fa-envelope"><a href="ajcraver@uncg.edu">Austin Craver</a></li>
-										<li class="icon solid fa-envelope"><a href="csdunefsky@uncg.edu">Chadwick Dunefsky</a></li>
-										<li class="icon solid fa-envelope"><a href="llsandov@uncg.edu">Lori Sandoval</a></li>
+										<li class="icon solid fa-envelope"><a href="mailto: mhbatema@uncg.edu">Marisa Bateman</a></li>
+										<li class="icon solid fa-envelope"><a href="mailto: tdbradsh@uncg.edu">Tara Bradshaw</a></li>
+										<li class="icon solid fa-envelope"><a href="mailto: ajcraver@uncg.edu">Austin Craver</a></li>
+										<li class="icon solid fa-envelope"><a href="mailto: csdunefsky@uncg.edu">Chadwick Dunefsky</a></li>
+										<li class="icon solid fa-envelope"><a href="mailto: llsandov@uncg.edu">Lori Sandoval</a></li>
 									</ul>
 								</section>
 
