--- a/toolkit4.html
+++ b/toolkit4.html
@@ -95,11 +95,12 @@
 										<h2>Get in touch</h2>
 									</header>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="mhbatema@uncg.edu">Marisa Bateman</a></li>
-										<li class="icon solid fa-envelope"><a href="tdbradsh@uncg.edu">Tara Bradshaw</a></li>
-										<li class="icon solid fa-envelope"><a href="ajcraver@uncg.edu">Austin Craver</a></li>
-										<li class="icon solid fa-envelope"><a href="csdunefsky@uncg.edu">Chadwick Dunefsky</a></li>
-										<li class="icon solid fa-envelope"><a href="llsandov@uncg.edu">Lori Sandoval</a></li>									</ul>
+										<li class="icon solid fa-envelope"><a href="mailto: mhbatema@uncg.edu">Marisa Bateman</a></li>
+										<li class="icon solid fa-envelope"><a href="mailto: tdbradsh@uncg.edu">Tara Bradshaw</a></li>
+										<li class="icon solid fa-envelope"><a href="mailto: ajcraver@uncg.edu">Austin Craver</a></li>
+										<li class="icon solid fa-envelope"><a href="mailto: csdunefsky@uncg.edu">Chadwick Dunefsky</a></li>
+										<li class="icon solid fa-envelope"><a href="mailto: llsandov@uncg.edu">Lori Sandoval</a></li>								
+									</ul>
 								</section>
 
 							<!-- Footer -->
