--- a/toolkit1.html
+++ b/toolkit1.html
@@ -37,7 +37,7 @@
 								<section>
 									<header class="main">
 										<h1>Gender Identity and Expression Training</h1>
-										<h2>Intended Age Group: 18 and Up, Resident Assistants, Teen Librarians, Camp counselors, etc. </h2>
+										<h2>Intended Age Group: 18 and Up, Resident Assistants, Teen Librarians, Camp Counselors, etc.</h2>
 									</header>
 
 
