--- a/toolkit3.html
+++ b/toolkit3.html
@@ -45,8 +45,9 @@
 		<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEcKLW_TTY&#x2F;view?utm_content=DAEcKLW_TTY&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Design</a> by Chadwick Dunefsky
 								</section>
 								<h3>Brief Description of Canva</h3>
-								<p> I used Canva to make this nifty toolkit! Stacey Kirby should use Canva because so and so!
-								<p>The "Design by Chadwick Dunefsky" will update to Tara's name once hers is complete and sent over. 
+								<p>I thought this section could be used to explain to Stacey why Canva might be useful. </p>
+								<p> I used Canva to make this nifty toolkit! Stacey Kirby should use Canva because so and so! </p>
+								<p>The "Design by Chadwick Dunefsky" will update to Tara's name once hers is complete and sent over. </p> 
 								<hr class="major" />
 
 						</div>
