--- a/toolkit2.html
+++ b/toolkit2.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Toolkit #3 by Tara Bradshaw</strong></a>
+									<a href="index.html" class="logo"><strong>Toolkit #2 by Tara Bradshaw</strong></a>
 									<ul class="icons">
 										<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -42,12 +42,11 @@
 		    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEcKLW_TTY&#x2F;view?embed">
 		  </iframe>
 		</div>
-		<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEcKLW_TTY&#x2F;view?utm_content=DAEcKLW_TTY&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Design</a> by Chadwick Dunefsky
+		<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEcKLW_TTY&#x2F;view?utm_content=DAEcKLW_TTY&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Design</a> by Tara Bradshaw
 								</section>
 								<h3>Brief Description of Canva</h3>
 								<p>I thought this section could be used to explain to Stacey why Canva might be useful. </p>
 								<p> I used Canva to make this nifty toolkit! Stacey Kirby should use Canva because so and so! </p>
-								<p>The "Design by Chadwick Dunefsky" will update to Tara's name once hers is complete and sent over. </p>
 								<hr class="major" />
 
 						</div>
