--- a/toolkit2.html
+++ b/toolkit2.html
@@ -35,6 +35,7 @@
 
 							<!-- Content -->
 								<section>
+									<h3>Name of Toolkit Goes Here</h3>
 									<div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
 		 padding-bottom: 48px; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
 		 border-radius: 8px; will-change: transform;">
@@ -43,6 +44,8 @@
 		  </iframe>
 		</div>
 		<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEcKLW_TTY&#x2F;view?utm_content=DAEcKLW_TTY&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Design</a> by Tara Bradshaw
+								<hr class="major" />
+
 								<h3>Brief Description of Canva</h3>
 								<p>I thought this section could be used to explain to Stacey why Canva might be useful. </p>
 								<p> I used Canva to make this nifty toolkit! Stacey Kirby should use Canva because so and so! </p>
