--- a/toolkit2.html
+++ b/toolkit2.html
@@ -46,6 +46,7 @@
 								<h3>Brief Description of Canva</h3>
 								<p>I thought this section could be used to explain to Stacey why Canva might be useful. </p>
 								<p> I used Canva to make this nifty toolkit! Stacey Kirby should use Canva because so and so! </p>
+								<p>We can also put a PDF link here for a more permanent storage of the toolkit. </p>
 								<hr class="major" />
 								</section>
 
