--- a/toolkit1.html
+++ b/toolkit1.html
@@ -81,6 +81,12 @@
 																<p><a href="https://www.aclu.org/know-your-rights/lgbtq-rights/#does-the-law-protect-my-right-to-use-the-restroom-consistent-with-my-gender-identity">Does the law protect my right to use the restroom consistent with my gender identity?</a></p>
 
 																<hr class="major" />
+
+									<h3></h3>
+									<div class="box">
+										<p>© [Marisa Bateman] 2021.  Toolkit lesson is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</p>
+									</div>
+																<hr class="major" />
 								</section>
 
 						</div>
