--- a/toolkit2.html
+++ b/toolkit2.html
@@ -88,6 +88,9 @@
 										<li class="icon solid fa-envelope"><a href="mailto: llsandov@uncg.edu">Lori Sandoval</a></li>
 									</ul>
 								</section>
+								<div class="box">
+									<p>© [Tara Bradshaw] 2021.  Toolkit lesson is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</p>
+								</div>
 
 							<!-- Footer -->
 			<!--					<footer id="footer">
