--- a/index.html
+++ b/index.html
@@ -204,6 +204,9 @@
 										<li class="icon solid fa-envelope"><a href="mailto: llsandov@uncg.edu">Lori Sandoval</a></li>
 									</ul>
 								</section>
+								<div class="box">
+									<p>© [Marisa Bateman, Tara Bradshaw, Austin Craver, Chadwick Dunefsky, Lori Sandoval] 2021.  Toolkit lesson is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</p>
+								</div>
 
 							<!-- Footer -->
 								<!--<footer id="footer">
