--- a/toolkit3.html
+++ b/toolkit3.html
@@ -64,6 +64,9 @@
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
 
 								</section>
+								<div class="box">
+									<p>© [Austin Craver] 2021.  Toolkit lesson is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</p>
+								</div>
 
 						</div>
 					</div>
