--- a/toolkit1.html
+++ b/toolkit1.html
@@ -82,10 +82,11 @@
 
 																<hr class="major" />
 
-<!--									<h3></h3>
+									<h3></h3>
+									<p><a href="/pdfs/toolkit1.pdf">Fpr a PDF version of this toolkit, click here!</a></p>
 
 																<hr class="major" />
-															-->
+
 								</section>
 								<div class="box">
 									<p>© [Marisa Bateman] 2021.  Toolkit lesson is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</p>
