--- a/toolkit1.html
+++ b/toolkit1.html
@@ -82,8 +82,8 @@
 
 																<hr class="major" />
 
-									<h3></h3>
-									<p><a href="/pdfs/toolkit1.pdf">Fpr a PDF version of this toolkit, click here!</a></p>
+									<h3>Save This Toolkit:</h3>
+									<p><a href="/pdfs/toolkit1.pdf">For a PDF version of this toolkit, click here!</a></p>
 
 																<hr class="major" />
 
