--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
 										</article>
 										<article>
 											<!-- <a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a> -->
-											<h3>Lori Sandoval</h3>
+											<h3>Final Report</h3>
 											<ul class="actions">
-												<li><a href="toolkit4.html" class="button">Toolkit 4</a></li>
+												<li><a href="finalreport.html" class="button">Final Report</a></li>
 											</ul>
 										</article>
 									</div>
 								</section>
-								
+
 						</div>
 					</div>
 
@@ -146,7 +146,7 @@
 										<li><a href="toolkit1.html">Toolkit 1</a></li>
 										<li><a href="toolkit2.html">Toolkit 2</a></li>
 										<li><a href="toolkit3.html">Toolkit 3</a></li>
-										<li><a href="toolkit4.html">Toolkit 4</a></li>
+										<li><a href="finalreport.html">Final Report</a></li>
 										<!--<li>
 											<span class="opener">Submenu</span>
 											<ul>
