--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 										</article>
 										<article>
 											<!-- <a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a> -->
-											<h3>Final Report</h3>
+											<h3>Our Recommendations and Reflections</h3>
 											<ul class="actions">
 												<li><a href="finalreport.html" class="button">Final Report</a></li>
 											</ul>
