--- a/finalreport.html
+++ b/finalreport.html
@@ -22,7 +22,9 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Final Report by Marisa Bateman, Tara Bradshaw, Chadwick Dunefsky, Austin Craver, and Lori Sandoval</strong></a>
+							<!--		<a href="index.html" class="logo"><strong>Final Report by Marisa Bateman, Tara Bradshaw, Chadwick Dunefsky, Austin Craver, and Lori Sandoval</strong></a> -->
+											<a href="index.html" class="logo"><strong>Final Report</strong></a> 
+
 									<ul class="icons">
 										<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
