--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 										<!--	<p>Marisa.</p> -->
 											<ul class="actions">
 												<li><a href="toolkit1.html" class="button">Toolkit 1</a></li>
-												<li><a href="toolkit1pdf.html" class="button">PDF</a></li>
+												<li><a href="/pdfs/toolkit1.pdf" class="button">PDF</a></li>
 											</ul>
 										</article>
 										<article>
