--- a/toolkit1.html
+++ b/toolkit1.html
@@ -89,7 +89,7 @@
 
 								</section>
 								<div class="box">
-									<p>© 2021, Marisa Bateman. Toolkit lesson is licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</a></p>
+									<p>© 2021, Marisa Bateman. Toolkit lesson is licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</a></p>
 								</div>
 
 						</div>
