--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 											<!---by HTML5 UP</h1> -->
 											<!---<p>A free and fully responsive site template</p> -->
 										</header>
-										<p>Welcome to Group 3's toolkit.</p>
+										<p>Marisa, Tara, Chadwick, Austin, and Lori worked together over the course of Spring 2021 to to facilitate secondary uses for the records and material using pre-existing material from Stacey Kirby’s website. This website is intended to host the toolkits created by Marisa, Tara, and Austin and the final report. These toolkits will provide Kirby with a better idea of how her material can be used in an educational context. The interdisciplinary nature of the toolkits also means that they can be used for a more broader audience. PDF versions of the toolkits and the final report are available to be saved for local use.</p>
 										<!--<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul>
