--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Stacey Kirby Toolkit<br />
+											<h1>Stacey Kirby Toolkits<br />
 											<!---by HTML5 UP</h1> -->
 											<!---<p>A free and fully responsive site template</p> -->
 										</header>
