--- a/toolkit1.html
+++ b/toolkit1.html
@@ -70,6 +70,8 @@
 										<li>Can gender change and evolve over time?</li>
 										<li>How and when is it appropriate to ask about someone’s gender identity?</li>
 										<li>Should gender identity stop an individual from participating in any aspect of society?</li>
+										<li>How did this activity make you feel about gender?</li>
+										<li>How can this training help you in your role as a (resident assistant, camp counselor, etc.)?</li>
 
 
 
