--- a/finalreport.html
+++ b/finalreport.html
@@ -23,7 +23,7 @@
 							<!-- Header -->
 								<header id="header">
 							<!--		<a href="index.html" class="logo"><strong>Final Report by Marisa Bateman, Tara Bradshaw, Chadwick Dunefsky, Austin Craver, and Lori Sandoval</strong></a> -->
-											<a href="index.html" class="logo"><strong>Final Report</strong></a> 
+											<a href="index.html" class="logo"><strong>Final Report</strong></a>
 
 									<ul class="icons">
 										<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -39,7 +39,7 @@
 								<section>
 									<header class="main">
 										<h1>Final Report</h1>
-									</header>
+										<iframe src="http://docs.google.com/gview? /pdfs/finalreport.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>									</header>
 
 
 								</section>
