--- a/finalreport.html
+++ b/finalreport.html
@@ -39,7 +39,7 @@
 								<section>
 									<header class="main">
 										<h1>Final Report</h1>
-										<iframe src="http://docs.google.com/gview? /pdfs/finalreport.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>									</header>
+										<iframe src="http://docs.google.com/gview? url=/pdfs/finalreport.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>									</header>
 
 
 								</section>
