--- a/toolkit3.html
+++ b/toolkit3.html
@@ -36,12 +36,13 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1></h1>
+										<h1>Lesson Plan: Using Performance Art to Inspire Social Change</h1>
+										<iframe class="wakeletEmbed" width="100%" height="760px" src="https://embed.wakelet.com/wakes/cZkL79ART7glEiKFNM8tv/list?border=1" style="border: none" allow="autoplay"></iframe><!-- Please only call https://embed-assets.wakelet.com/wakelet-embed.js once per page --><script src="https://embed-assets.wakelet.com/wakelet-embed.js" charset="UTF-8"></script>
 									</header>
 
 								</section>
 								<div class="box">
-									<p>© [Austin Craver] 2021.  Toolkit lesson is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</p>
+									<p>© 2021, Austin Craver. Toolkit lesson is licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</a></p>
 								</div>
 
 						</div>
