--- a/toolkit3.html
+++ b/toolkit3.html
@@ -36,7 +36,7 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Using Performance Art to Inspire Social Change</h1>
+										<h1>Lesson Plan: Using Performance Art to Inspire Social Change</h1>
 										<iframe class="wakeletEmbed" width="100%" height="760px" src="https://embed.wakelet.com/wakes/cZkL79ART7glEiKFNM8tv/list?border=1" style="border: none" allow="autoplay"></iframe><!-- Please only call https://embed-assets.wakelet.com/wakelet-embed.js once per page --><script src="https://embed-assets.wakelet.com/wakelet-embed.js" charset="UTF-8"></script>
 									</header>
 
