--- a/finalreport.html
+++ b/finalreport.html
@@ -23,7 +23,7 @@
 							<!-- Header -->
 								<header id="header">
 							<!--		<a href="index.html" class="logo"><strong>Final Report by Marisa Bateman, Tara Bradshaw, Chadwick Dunefsky, Austin Craver, and Lori Sandoval</strong></a> -->
-											<a href="index.html" class="logo"><strong>Final Report</strong></a>
+											<a href="index.html" class="logo"><strong>Our Recommendations and Reflections</strong></a>
 
 									<ul class="icons">
 										<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -38,9 +38,8 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Final Report</h1>
-										<iframe src="http://docs.google.com/gview? url=/pdfs/finalreport.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>									</header>
-
+										<h1>Final Report Draft</h1>
+										<iframe src="https://drive.google.com/file/d/1b0ARGzLCHylIEdoapJWg3BaIuQzXJUOX/preview" width="640" height="480"></iframe>
 
 								</section>
 
