--- a/toolkit2.html
+++ b/toolkit2.html
@@ -36,11 +36,10 @@
 							<!-- Content -->
 								<section>
 								<h3>Name of Toolkit Goes Here</h3>
-									<div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;padding-bottom: 48px; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
-		  						<iframe style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEcKLW_TTY&#x2F;view?embed">
-		  						</iframe>
-									</div>
-									<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEcKLW_TTY&#x2F;view?utm_content=DAEcKLW_TTY&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Design</a> by Tara Bradshaw
+								<div style="position: relative; width: 100%; height: 0; padding-top: 129.4118%;padding-bottom: 48px; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;border-radius: 8px; will-change: transform;">
+								<iframe style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEcDwsWChA&#x2F;view?embed"></iframe>
+								</div>
+								<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEcDwsWChA&#x2F;view?utm_content=DAEcDwsWChA&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Gender Identity (Stacey Kirby Toolkit)</a> by Tara Bradshaw
 								<hr class="major" />
 
 								<h3>Brief Description of Canva</h3>
@@ -51,7 +50,7 @@
 								</section>
 
 								<div class="box">
-									<p>© [Tara Bradshaw] 2021.  Toolkit lesson is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</p>
+									<p>© 2021, Tara Bradshaw. Toolkit lesson is licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</a></p>
 								</div>
 
 
