--- a/toolkit2.html
+++ b/toolkit2.html
@@ -42,6 +42,12 @@
 								<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEcDwsWChA&#x2F;view?utm_content=DAEcDwsWChA&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener"></a>
 								<hr class="major" />
 
+								<h3>Civic Duty</h3>
+								<div style="position: relative; width: 100%; height: 0; padding-top: 129.4118%; padding-bottom: 48px; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+								<iframe style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEcJtTgWUA&#x2F;view?embed">
+								</iframe></div><a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEcJtTgWUA&#x2F;view?utm_content=DAEcJtTgWUA&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener"></a>
+								<hr class="major" />
+
 								<h3>Brief Description of Canva</h3>
 								<p>I thought this section could be used to explain to Stacey why Canva might be useful. </p>
 								<p> I used Canva to make this nifty toolkit! Stacey Kirby should use Canva because so and so! </p>
