--- a/toolkit2.html
+++ b/toolkit2.html
@@ -51,9 +51,14 @@
 								<h3>Brief Description of Canva</h3>
 								<p>I thought this section could be used to explain to Stacey why Canva might be useful. </p>
 								<p> I used Canva to make this nifty toolkit! Stacey Kirby should use Canva because so and so! </p>
-								<p>We can also put a PDF link here for a more permanent storage of the toolkit. </p>
+								<hr class="major" />
+								<h3>Save These Toolkits</h3>
+								<a href="/pdfs/genderidentity.pdf">Gender Identity Toolkit </a>
+								<a href="/pdfs/civicduty.pdf">Civic Duty Toolkit </a>
 								<hr class="major" />
 								</section>
+
+
 
 								<div class="box">
 									<p>© 2021, Tara Bradshaw. Toolkit lesson is licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</a></p>
