--- a/toolkit2test.html
+++ b/toolkit2test.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Toolkit #3 by Austin Craver</strong></a>
+									<a href="index.html" class="logo"><strong>Toolkit #2 by Tara Bradshaw</strong></a>
 									<ul class="icons">
 										<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -35,20 +35,36 @@
 
 							<!-- Content -->
 								<section>
-									<header class="main">
-										<h2>Lesson Plan: Using Performance Art to Inspire Social Change Draft</h2>
-										</header>
-										<h3></h3>
-										<iframe class="wakeletEmbed" width="100%" height="760px" src="https://embed.wakelet.com/wakes/cZkL79ART7glEiKFNM8tv/list?border=1" style="border: none" allow="autoplay"></iframe><!-- Please only call https://embed-assets.wakelet.com/wakelet-embed.js once per page --><script src="https://embed-assets.wakelet.com/wakelet-embed.js" charset="UTF-8"></script>
-										<hr class="major"/>
-										<h3>Save This Toolkit</h3>
-										<a href="/pdfs/performanceart.pdf">Using Performance Art to Inspire Social Change Toolkit </a>
-										<hr class="major"/>
-
-								</section>
-								<div class="box">
-									<p>© 2021, Austin Craver. Toolkit lesson is licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</a></p>
+								<h3>Gender Identity</h3>
+								<div style="position: relative; width: 100%; height: 0; padding-top: 129.4118%;padding-bottom: 48px; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;border-radius: 8px; will-change: transform;">
+								<iframe style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEcDwsWChA&#x2F;view?embed"></iframe>
 								</div>
+								<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEcDwsWChA&#x2F;view?utm_content=DAEcDwsWChA&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener"></a>
+								<hr class="major" />
+
+								<h3>Civic Duty</h3>
+								<div style="position: relative; width: 100%; height: 0; padding-top: 129.4118%; padding-bottom: 48px; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+								<iframe style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEcJtTgWUA&#x2F;view?embed">
+								</iframe></div><a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEcJtTgWUA&#x2F;view?utm_content=DAEcJtTgWUA&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener"></a>
+								<hr class="major" />
+
+								<h3>Brief Description of Canva</h3>
+								<p>I thought this section could be used to explain to Stacey why Canva might be useful. </p>
+								<p> I used Canva to make this nifty toolkit! Stacey Kirby should use Canva because so and so! </p>
+								<hr class="major" />
+								<h3>Save These Toolkits</h3>
+								<a href="/pdfs/genderidentity.pdf">Gender Identity Toolkit </a>
+								<p></p>
+								<a href="/pdfs/civicduty.pdf">Civic Duty Toolkit </a>
+								<hr class="major" />
+								</section>
+
+
+
+								<div class="box">
+									<p>© 2021, Tara Bradshaw. Toolkit lesson is licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</a></p>
+								</div>
+
 
 						</div>
 					</div>
@@ -88,8 +104,9 @@
 									</ul>
 								</section>
 
+
 							<!-- Footer -->
-					<!--			<footer id="footer">
+			<!--					<footer id="footer">
 									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 								</footer>
 -->
