--- a/toolkit2.html
+++ b/toolkit2.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title></title>
+		<title>Gender Identity and Civic Duty Toolkits</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
