--- a/toolkit3.html
+++ b/toolkit3.html
@@ -44,6 +44,10 @@
 										<h3>Save This Toolkit</h3>
 										<a href="/pdfs/performanceart.pdf">Using Performance Art to Inspire Social Change Toolkit </a>
 										<hr class="major"/>
+										<h3>Brief Description of Wakelet</h3>
+										<p>I thought this section could be used to explain to Stacey why Wakelet might be useful. </p>
+										<p> I used Wakelet to make this nifty toolkit! Stacey Kirby should use Wakelet because so and so! </p>
+										<hr class="major" />
 
 								</section>
 								<div class="box">
