--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Group 3 Toolkit</title>
+		<title>Stacy Kirby Toolkits</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -36,7 +36,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Stacey Kirby Toolkits<br />
+											<h2>Stacey Kirby Toolkits<br/>
 											<!---by HTML5 UP</h1> -->
 											<!---<p>A free and fully responsive site template</p> -->
 										</header>
