--- a/toolkit2.html
+++ b/toolkit2.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Gender Identity and Civic Duty Toolkits</title>
+		<title></title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -36,16 +36,11 @@
 							<!-- Content -->
 								<section>
 								<h3>Gender Identity</h3>
-								<div style="position: relative; width: 100%; height: 0; padding-top: 129.4118%;padding-bottom: 48px; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;border-radius: 8px; will-change: transform;">
-								<iframe style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEcDwsWChA&#x2F;view?embed"></iframe>
-								</div>
-								<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEcDwsWChA&#x2F;view?utm_content=DAEcDwsWChA&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener"></a>
+								<iframe src="https://drive.google.com/file/d/17UsQW5HTALsMHvnQLe1zxdvBkAVc6_2z/preview" width="640" height="480"></iframe>
 								<hr class="major" />
 
 								<h3>Civic Duty</h3>
-								<div style="position: relative; width: 100%; height: 0; padding-top: 129.4118%; padding-bottom: 48px; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
-								<iframe style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEcJtTgWUA&#x2F;view?embed">
-								</iframe></div><a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEcJtTgWUA&#x2F;view?utm_content=DAEcJtTgWUA&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener"></a>
+								<iframe src="https://drive.google.com/file/d/1Ys-o37o2UyPGsz49wvIpVnUw_vEHS4QE/preview" width="640" height="480"></iframe>
 								<hr class="major" />
 
 								<h3>Brief Description of Canva</h3>
@@ -63,8 +58,7 @@
 
 								<div class="box">
 									<p>© 2021, Tara Bradshaw. Toolkit lesson is licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</a></p>
-									<a href="toolkit2.org">Testing Testing </a>
-									</div>
+								</div>
 
 
 						</div>
