--- a/finalreport.html
+++ b/finalreport.html
@@ -39,6 +39,7 @@
 								<section>
 									<header class="main">
 										<h3>Final Report Draft</h3>
+										</header>
 										<iframe src="https://drive.google.com/file/d/1b0ARGzLCHylIEdoapJWg3BaIuQzXJUOX/preview" width="960" height="720"></iframe>
 										<hr class="major" />
 										<h3>Save Our Recommendations and Reflections</h3>
