--- a/finalreport.html
+++ b/finalreport.html
@@ -43,7 +43,7 @@
 										<iframe src="https://drive.google.com/file/d/1b0ARGzLCHylIEdoapJWg3BaIuQzXJUOX/preview" width="960" height="720"></iframe>
 										<hr class="major" />
 										<h3>Save Our Recommendations and Reflections</h3>
-										<a href="/pdfs/finalreport.pdf">Using Performance Art to Inspire Social Change Toolkit </a>
+										<a href="/pdfs/finalreport.pdf">Final Report</a>
 										<p></p>
 										<hr class ="major" />
 								</section>
