--- a/toolkit2.html
+++ b/toolkit2.html
@@ -35,11 +35,11 @@
 
 							<!-- Content -->
 								<section>
-								<h3>Gender Identity</h3>
-								<iframe src="https://drive.google.com/file/d/17UsQW5HTALsMHvnQLe1zxdvBkAVc6_2z/preview" width="640" height="480"></iframe>								
+								<h3>Gender Identity Draft</h3>
+								<iframe src="https://drive.google.com/file/d/17UsQW5HTALsMHvnQLe1zxdvBkAVc6_2z/preview" width="640" height="480"></iframe>
 								<hr class="major" />
 
-								<h3>Civic Duty</h3>
+								<h3>Civic Duty Draft</h3>
 								<iframe src="https://drive.google.com/file/d/1Ys-o37o2UyPGsz49wvIpVnUw_vEHS4QE/preview" width="640" height="480"></iframe>
 								<hr class="major" />
 
