--- a/toolkit3.html
+++ b/toolkit3.html
@@ -42,8 +42,8 @@
 										<iframe class="wakeletEmbed" width="100%" height="760px" src="https://embed.wakelet.com/wakes/cZkL79ART7glEiKFNM8tv/list?border=1" style="border: none" allow="autoplay"></iframe><!-- Please only call https://embed-assets.wakelet.com/wakelet-embed.js once per page --><script src="https://embed-assets.wakelet.com/wakelet-embed.js" charset="UTF-8"></script>
 										<hr class="major"/>
 										<h3>Brief Description of Wakelet</h3>
-										<p>I thought this section could be used to explain to Stacey why Wakelet might be useful. </p>
-										<p> I used Wakelet to make this nifty toolkit! Stacey Kirby should use Wakelet because so and so! </p>
+										<p>I thought this section could be used to explain to Stacy why Wakelet might be useful. </p>
+										<p> I used Wakelet to make this nifty toolkit! Stacy Kirby should use Wakelet because so and so! </p>
 										<hr class="major" />
 										<h3>Save This Toolkit</h3>
 										<a href="/pdfs/performanceart.pdf">Using Performance Art to Inspire Social Change Toolkit </a>
