--- a/toolkit2.html
+++ b/toolkit2.html
@@ -44,8 +44,8 @@
 								<hr class="major" />
 
 								<h3>Brief Description of Canva</h3>
-								<p>I thought this section could be used to explain to Stacy why Canva might be useful. </p>
-								<p> I used Canva to make this nifty toolkit! Stacy Kirby should use Canva because so and so! </p>
+								<p>I thought this section could be used to explain to Stacey why Canva might be useful. </p>
+								<p> I used Canva to make this nifty toolkit! Stacey Kirby should use Canva because so and so! </p>
 								<hr class="major" />
 								<h3>Save These Toolkits</h3>
 								<a href="/pdfs/genderidentity.pdf">Gender Identity Toolkit </a>
