--- a/toolkit1.html
+++ b/toolkit1.html
@@ -36,8 +36,9 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Gender Identity and Expression Training</h1>
-										<h2>Intended Age Group: 18 and Up, Resident Assistants, Teen Librarians, Camp Counselors, etc.</h2>
+										<h2>Gender Identity and Expression Training</h2>
+										<h3>Intended Age Group: 18 and Up</h3>
+										<h3>Audience: Resident Assistants, Teen Librarians, Camp Counselors, etc. </h3>
 									</header>
 
 
