--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									<div class="posts">
 										<article>
 										<!--	<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a> -->
-											<h3>Marisa Bateman</h3>
+											<h3>Gender Identity</h3>
 										<!--	<p>Marisa.</p> -->
 											<ul class="actions">
 												<li><a href="toolkit1.html" class="button">Toolkit 1</a></li>
@@ -112,6 +112,7 @@
 										<li><a href="toolkit2.html">Toolkit 2</a></li>
 										<li><a href="toolkit3.html">Toolkit 3</a></li>
 										<li><a href="finalreport.html">Final Report</a></li>
+										<li><a href="possibletools.html">Final Report</a></li>
 										<!--<li>
 											<span class="opener">Submenu</span>
 											<ul>
