--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 										<li><a href="toolkit2.html">Toolkit 2</a></li>
 										<li><a href="toolkit3.html">Toolkit 3</a></li>
 										<li><a href="finalreport.html">Final Report</a></li>
-										<li><a href="possibletools.html">Final Report</a></li>
+										<li><a href="possibletools.html">Possible Tools</a></li>
 										<!--<li>
 											<span class="opener">Submenu</span>
 											<ul>
