--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 										<!--	<p>Marisa.</p> -->
 											<ul class="actions">
 												<li><a href="toolkit1.html" class="button">Toolkit 1</a></li>
+												<li><a href="toolkit2.html" class="button">Toolkit 2</a></li>
 												<!-- <li><a href="/pdfs/toolkit1.pdf" class="button">PDF</a></li> -->
 											</ul>
 										</article>
@@ -71,8 +72,8 @@
 											<!--<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a> -->
 											<h3>Tara Bradshaw</h3>
 											<ul class="actions">
-												<li><a href="toolkit2.html" class="button">Toolkit 2</a></li>
-											</ul>
+
+												<li><a href="toolkit2.html" class="button">Toolkit 2</a></li>											</ul>
 										</article>
 										<article>
 											<!--<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a> -->
