--- a/index.html
+++ b/index.html
@@ -60,26 +60,26 @@
 									<div class="posts">
 										<article>
 										<!--	<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a> -->
-											<h3>Gender Identity</h3>
+											<h3>Gender Identity Toolkits</h3>
 										<!--	<p>Marisa.</p> -->
 											<ul class="actions">
-												<li><a href="toolkit1.html" class="button">Toolkit 1</a></li>
-												<li><a href="toolkit2.html" class="button">Toolkit 2</a></li>
+												<li><a href="genderidentityYA.html" class="button">Young Adult Leaders</a></li>
+												<li><a href="genderidentityMS.html" class="button">Middle School Students</a></li>
 												<!-- <li><a href="/pdfs/toolkit1.pdf" class="button">PDF</a></li> -->
 											</ul>
 										</article>
 										<article>
 											<!--<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a> -->
-											<h3>Tara Bradshaw</h3>
+											<h3>Civics Toolkit</h3>
 											<ul class="actions">
-
-												<li><a href="toolkit2.html" class="button">Toolkit 2</a></li>											</ul>
+											<li><a href="civics.html" class="button">High School Students</a></li>
+											</ul>
 										</article>
 										<article>
 											<!--<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a> -->
-											<h3>Austin Craver</h3>
+											<h3>Drama Toolkit</h3>
 											<ul class="actions">
-												<li><a href="toolkit3.html" class="button">Toolkit 3</a></li>
+												<li><a href="drama.html" class="button">College Students</a></li>
 											</ul>
 										</article>
 										<article>
@@ -109,9 +109,13 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="toolkit1.html">Toolkit 1</a></li>
-										<li><a href="toolkit2.html">Toolkit 2</a></li>
-										<li><a href="toolkit3.html">Toolkit 3</a></li>
+										<span class="opener">Gender Identity Toolkits</span>
+										<ul>
+											<li><a href="genderidentityYA.html">Young Adult Leaders</a></li>
+											<li><a href="genderidentityMS">Middle School Students</a></li>
+										</ul>
+										<li><a href="civics.html">Civics Toolkit</a></li>
+										<li><a href="drama.html">Drama Toolkit</a></li>
 										<li><a href="finalreport.html">Final Report</a></li>
 									<!--	<li><a href="possibletools.html">Possible Tools</a></li> -->
 										<!--<li>
