--- a/civics.html
+++ b/civics.html
@@ -24,30 +24,23 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Toolkit #2 by Tara Bradshaw</strong></a>
 									<ul class="icons">
-										<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-									-->
+
 									</ul>
 								</header>
 
 							<!-- Content -->
 								<section>
-								<h3>Gender Identity Draft</h3>
-								<iframe src="https://drive.google.com/file/d/17UsQW5HTALsMHvnQLe1zxdvBkAVc6_2z/preview" width="640" height="480"></iframe>
-								<hr class="major" />
-
-								<h3>Civic Duty Draft</h3>
-								<iframe src="https://drive.google.com/file/d/1Ys-o37o2UyPGsz49wvIpVnUw_vEHS4QE/preview" width="640" height="480"></iframe>
-								<hr class="major" />
-
-								<h3>Brief Description of Canva</h3>
+								<h3>Introduction</h3>
 								<p>I thought this section could be used to explain to Stacey why Canva might be useful. </p>
 								<p> I used Canva to make this nifty toolkit! Stacey Kirby should use Canva because so and so! </p>
 								<hr class="major" />
 								<h3>Save These Toolkits</h3>
+								<h3>Civics</h3>
+								<iframe src="https://drive.google.com/file/d/17UsQW5HTALsMHvnQLe1zxdvBkAVc6_2z/preview" width="640" height="480"></iframe>
+								<hr class="major" />
+
+
+
 								<a href="/pdfs/genderidentity.pdf">Gender Identity Toolkit </a>
 								<p></p>
 								<a href="/pdfs/civicduty.pdf">Civic Duty Toolkit </a>
