--- a/civics.html
+++ b/civics.html
@@ -32,6 +32,8 @@
 								<section>
 								<h3>Introduction</h3>
 								<p>The "Stacey L. Kirby Toolkit: Civic Duty," created in Canva, offers resources and activities for students studying voting inequality and obstacles in the U.S. The activities and discussion questions integrate the work of artist Stacey Kirby and her performance piece titled, "The Power of the Ballot." Students will have the chance to interact directly with archived materials from this work.</p>
+								<hr class="major" />
+								<h3>Why Use Canva?</h3>
 								<p>Canva is a graphic design platform that is easy to use, and offers a free version! It is extremely user friendly and can be used for everything from social media posts to resumes. It includes built-in templates and graphics, but has the option of starting from "scratch" and is completely customizable. It offers different final format options (video, .PNG, HTML embedding, etc.) and is perfect for any kind of project. The free version was used to create the above toolkits, showing that even the affordable version can still be used to create fun, attractive designs!</p>
 								<p>The choice to use Canva to create the "What is Gender?" and "Civic Duty" toolkits was based on a combination of audience and subject matter. These fun designs are perfect for a K-12 audience, and graphic choices reflect the topics as well as the educational purpose. It is colorful and grabs the attention of the audience. The vintage, notebook look is meant to reflect Stacey Kirby's "vintage-government-agency" aesthetic, but purposefully geared towards a younger audience. I recommend using this platform for future educational (or personal) projects because of its simplicity, customization options, and visual appeal.</p>
 								<hr class="major" />
