--- a/genderidentityMS.html
+++ b/genderidentityMS.html
@@ -22,43 +22,37 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Toolkit #2 by Tara Bradshaw</strong></a>
+									<a href="index.html" class="logo"><strong>Toolkit by Tara Bradshaw</strong></a>
 									<ul class="icons">
-										<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-									-->
+
 									</ul>
 								</header>
 
 							<!-- Content -->
 								<section>
-								<h3>Gender Identity Draft</h3>
-								<iframe src="https://drive.google.com/file/d/17UsQW5HTALsMHvnQLe1zxdvBkAVc6_2z/preview" width="640" height="480"></iframe>
+								<h3>Introduction</h3>
+								<p>The "Stacey L. Kirby Toolkit: What is Gender?", created in Canva, offers resources and activities for middle school aged students studying gender. The activities and discussion questions integrate the work of artist Stacey Kirby and her performance piece titled, "I AM." Students will have the chance to interact directly with archived materials from this performance.</p>								<hr class="major" />
+								<h3>Why Use Canva?</h3>
+								<p>Canva is a graphic design platform that is easy to use, and offers a free version! It is extremely user friendly and can be used for everything from social media posts to resumes. It includes built-in templates and graphics, but has the option of starting from "scratch" and is completely customizable. It offers different final format options (video, .PNG, HTML embedding, etc.) and is perfect for any kind of project. The free version was used to create the above toolkits, showing that even the affordable version can still be used to create fun, attractive designs!</p>
+								<p>The choice to use Canva to create the "What is Gender?" and "Civic Duty" toolkits was based on a combination of audience and subject matter. These fun designs are perfect for a K-12 audience, and graphic choices reflect the topics as well as the educational purpose. It is colorful and grabs the attention of the audience. The vintage, notebook look is meant to reflect Stacey Kirby's "vintage-government-agency" aesthetic, but purposefully geared towards a younger audience. I recommend using this platform for future educational (or personal) projects because of its simplicity, customization options, and visual appeal.</p>
+								<hr class="major" />
+								<h3>Gender identity Toolkit for Middle School Students</h3>
+								<iframe src="https://drive.google.com/file/d/1sP10RoIlSRaYnnVze1RJm-KewMX7a8xq/preview" width="640" height="480"></iframe>
 								<hr class="major" />
 
-								<h3>Civic Duty Draft</h3>
-								<iframe src="https://drive.google.com/file/d/1Ys-o37o2UyPGsz49wvIpVnUw_vEHS4QE/preview" width="640" height="480"></iframe>
-								<hr class="major" />
 
-								<h3>Brief Description of Canva</h3>
-								<p>I thought this section could be used to explain to Stacey why Canva might be useful. </p>
-								<p> I used Canva to make this nifty toolkit! Stacey Kirby should use Canva because so and so! </p>
-								<hr class="major" />
-								<h3>Save These Toolkits</h3>
-								<a href="/pdfs/genderidentity.pdf">Gender Identity Toolkit </a>
+								<h3>Save This Toolkit</h3>
+								<a href="/pdfs/genderidentityMS.pdf">For a PDF version of this toolkit, click here!</a>
 								<p></p>
-								<a href="/pdfs/civicduty.pdf">Civic Duty Toolkit </a>
+								<a href="/pdfs/genderidentityMSprint.pdf">For a print friendly PDF version of this toolkit, click here!</a>
 								<hr class="major" />
+
 								</section>
 
 
 
 								<div class="box">
 									<p>© 2021, Tara Bradshaw. Toolkit lesson is licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</a></p>
-									<a href="toolkit2orig.html">Testing Testing</a>
 								</div>
 
 
