--- a/drama.html
+++ b/drama.html
@@ -46,7 +46,7 @@
 										<p> I used Wakelet to make this nifty toolkit! Stacey Kirby should use Wakelet because so and so! </p>
 										<hr class="major" />
 										<h3>Save This Toolkit</h3>
-										<a href="/pdfs/performanceart.pdf">Using Performance Art to Inspire Social Change Toolkit </a>
+										<a href="/pdfs/performanceart.pdf">For a PDF version of this toolkit, click here!</a>
 										<hr class="major"/>
 
 
