--- a/civics.html
+++ b/civics.html
@@ -77,7 +77,7 @@
 										<span class="opener">Gender Identity Toolkits</span>
 										<ul>
 											<li><a href="genderidentityYA.html">Young Adult Leaders</a></li>
-											<li><a href="genderidentityMS">Middle School Students</a></li>
+											<li><a href="genderidentityMS.html">Middle School Students</a></li>
 										</ul>
 										</li>
 										<li><a href="civics.html">Civics Toolkit</a></li>
