--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
 									</ul>
 								</section>
 
+								<!-- Footer -->
+								<footer id="footer">
+									<p class="copyright">For the source code the website, <a href="https://github.com/uncgeducationaltoolkit/uncgeducationaltoolkit.github.io">click here.</a>.</p>
+								</footer>
+
+
 
 
 						</div>
