--- a/genderidentityYA.html
+++ b/genderidentityYA.html
@@ -37,10 +37,15 @@
 								<section>
 									<header class="main">
 										<h2>Gender Identity and Expression Training</h2>
-										<h3>Intended Age Group: 18 and Up</h3>
-										<h3>Audience: Resident Assistants, Teen Librarians, Camp Counselors, etc. </h3>
 									</header>
 
+									<h3>Introduction</h3>
+									<p>As leaders in your organizations, you have a lot of power to help create safe and inclusive environments for students across the LGBTQIA community. This short training is based on Stacey L. Kirby's "I Am" performanative interaction that explores gender identity. It is meant to get participants to actively consider gender identity to help create and foster a safe and understanding environment. This activity is designed for young adult leaders such as college resident assistants, camp counselors, teen librarians, and others.</p>
+									</header>
+
+									<h3>Intended Age Group: 18 and Up</h3>
+									<h3>Audience: Resident Assistants, Teen Librarians, Camp Counselors, and other Young Adult Leaders</h3>
+									<hr class="major"
 
 									<h3>Links for Activity </h3>
 									<p><a href="http://cargocollective.com/staceykirby/I-AM ">Website and Description of “I Am” Project</a></p>
@@ -59,8 +64,8 @@
 										<li>Have participants fill out a card with their gender identity (Give the option at the beginning of presentation that participants may keep their answers private if they choose).</li>
 										<li>Depending on the size of the group, you can break out into smaller groups to discuss your answers or meet as one large group. Have the group go over the below questions. Appoint a recorder to write down and present about the group’s discussion and a time keeper to keep each question at a few minutes in each group.</li>
 										<li>Make time for each group’s recorder to present the group’s findings. If you are able, show photos from Stacy L. Kirby’s website including examples of completed cards from the original performances.</li>
-										<li>Then talk about some of the below case studies about gender identity and its relevance to the participants’ work.</li>
-										<li>Leave time for Q & A and comments. Leave time for everyone to be declared valid as a human.</li>
+										<li>Then talk about some of the case studies about gender identity and its relevance to the participants’ work. (You can find these in the in the handout links).</li>
+										<li> Leave time for Q & A and comments. Leave time for everyone to be declared valid as a human as demonstrated in the "I Am" video.</li>
 									</ol>
 									<hr class="major" />
 
