--- a/genderidentityYA.html
+++ b/genderidentityYA.html
@@ -40,7 +40,7 @@
 									</header>
 
 									<h3>Introduction</h3>
-									<p>As leaders in your organizations, you have a lot of power to help create safe and inclusive environments for students across the LGBTQIA community. This short training is based on Stacey L. Kirby's "I Am" performanative interaction that explores gender identity. It is meant to get participants to actively consider gender identity to help create and foster a safe and understanding environment. This activity is designed for young adult leaders such as college resident assistants, camp counselors, teen librarians, and others.</p>
+									<p>As leaders in your organizations, you have a lot of power to help create safe and inclusive environments for students across the LGBTQIA community. This short training is based on Stacey L. Kirby's "I Am" performative interaction that explores gender identity. It is meant to get participants to actively consider gender identity to help create and foster a safe and understanding environment. This activity is designed for young adult leaders such as college resident assistants, camp counselors, teen librarians, and others.</p>
 									</header>
 
 									<h3>Intended Age Group: 18 and Up</h3>
